--- a/rest-api-node/views/index.html
+++ b/rest-api-node/views/index.html
@@ -16,7 +16,7 @@
         <th>Actions</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody id="products-table-body">
 
     </tbody>
   </table>
