--- a/rest-api-node/views/layout.html
+++ b/rest-api-node/views/layout.html
@@ -13,6 +13,7 @@
     {% block body %}{% endblock %}
 
     <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <script src="bower_components/nunjucks/browser/nunjucks.js" charset="utf-8"></script>
     <script src="/js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
