--- a/rest-api-node/app/views/index.html
+++ b/rest-api-node/app/views/index.html
@@ -5,7 +5,7 @@
   <button id="get-button">READ/GET Products</button>
   <form id="create-form">
     <input type="text" id="create-input" />
-    <button>Create/PORT</button>
+    <button>Create/POST</button>
   </form>
   <hr/>
   <table>
