Finishing touches on Node REST API

--- a/rest-api-node/public/views/_item-row.html
+++ b/rest-api-node/public/views/_item-row.html
@@ -1,9 +1,9 @@
 <tr>
-  <td id='id'>
+  <td class='product-id'>
     {{ id }}
   </td>
   <td>
-    <input type='text' class="name" value="{{ name }}"/>
+    <input type='text' class="product-name" value="{{ name }}"/>
   </td>
   <td>
     <button class='update-button'>UPDATE/PUT</button>
